--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -19,8 +19,9 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"  ><a href="/mafegy/en/p/501529" translate="category.orange"></a></h3>
-                    <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+                    <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" >
+                    <div type="discount"  class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount"  class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
@@ -44,8 +45,8 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                    <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                    <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
@@ -69,8 +70,8 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-<div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+<div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
@@ -92,8 +93,8 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.tomato"></a></h3>
-<div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">110 <b>EGP</b></div>
+<div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">110 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
@@ -116,8 +117,8 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-<div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+<div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
                       <div class="css-1mwn02k d-flex">
@@ -140,8 +141,8 @@
                       <div class="img-placeholder"></div>
                     </figure></a></div>
                     <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                    <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                    <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                     <div class="css-abm2xy">
@@ -307,8 +308,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.orange"></a></h3>
-                    <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+                    <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -331,8 +332,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                      <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                      <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
@@ -356,8 +357,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -379,8 +380,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.tomato"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">110 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">110 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -403,8 +404,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -427,8 +428,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                      <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                      <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
@@ -553,8 +554,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.orange"></a></h3>
-<div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+<div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -577,8 +578,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                      <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                      <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
@@ -602,8 +603,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -625,8 +626,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.tomato"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">110 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">110 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -649,8 +650,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.pomegranate"></a></h3>
-  <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">100 <b>EGP</b></div>
+  <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">100 <b>EGP</b></div>
                     </div>                    <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
                         <div class="css-1mwn02k d-flex">
@@ -673,8 +674,8 @@
                         <div class="img-placeholder"></div>
                       </figure></a></div>
                       <h3 class="css-1pnv3q4"  [ngClass]="{'rtl': is_rtl}"><a href="/mafegy/en/p/501529" translate="category.olive_oil"></a></h3>
-                      <div class="css-3ht5in" ><div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
-                    <div type="discount" [ngClass]="{'float-right': is_rtl}" class="css-1xhl7rjd">95 <b>EGP</b></div>
+                      <div class="css-3ht5in" [ngClass]="{'f-right': is_rtl}" ><div type="discount" class="css-1xhl7rj">90 <span class="css-k5xvqz">EGP</span></div>
+                    <div type="discount" class="css-1xhl7rjd">95 <b>EGP</b></div>
                     </div>
                     <p class="css-sjzzz0"  [ngClass]="{'rtl': is_rtl}" translate="category.fruits"></p>
                       <div class="css-abm2xy">
