--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -313,6 +313,8 @@
                                       <li><a routerLink="/products" translate="category.oil"></a></li>
                                       <li><a routerLink="/products" translate="category.bread"></a></li>
                                       <li><a routerLink="/products" translate="category.jam"></a></li>
+                                      <li><a routerLink="/products" translate="category.honey"></a></li>
+                                      <li><a routerLink="/products" translate="category.sugar"></a></li>
                                       <li><a routerLink="/products" translate="category.frozen_food"></a></li>
                                       <!-- <li id="cat_toggle" class="has-sub"><a href="#">  More Items</a>
                                           <ul class="categorie_sub">
