--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -6,6 +6,10 @@ line-height: 1.3;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
+.f-right{
+    align-self: flex-end;
+
+}
 
 
 .product-list{
