--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -70,7 +70,7 @@
                                           </select>
                                           <div class="nice-select select_option" tabindex="0"><span class="current" translate>home.select_category</span>
                                               <ul class="list">
-                                                  <li data-value="1" class="option selected">Select a categories</li>
+                                                  <!-- <li data-value="1" class="option selected">Select a categories</li>
                                                   <li data-value="2" class="option">Accessories</li>
                                                   <li data-value="3" class="option">Accessories &amp; More</li>
                                                   <li data-value="4" class="option">Butters &amp; Eggs</li>
@@ -85,7 +85,16 @@
                                                   <li data-value="13" class="option">Shop</li>
                                                   <li data-value="14" class="option">Laptops &amp; Desktops</li>
                                                   <li data-value="15" class="option">Watchs</li>
-                                                  <li data-value="16" class="option">Electronic</li>
+                                                  <li data-value="16" class="option">Electronic</li> -->
+                                                <li class="option" translate="category.meat"></li>
+                                                <li class="option" translate="category.butter"></li>
+                                                <li class="option" translate="category.milk"></li>
+                                                <li class="option" translate="category.oil"></li>
+                                                <li class="option" translate="category.bread"></li>
+                                                <li class="option" translate="category.jam"></li>
+                                                <li class="option" translate="category.honey"></li>
+                                                <li class="option" translate="category.sugar"></li>
+                                                <li class="option" translate="category.frozen_food"></li>
                                               </ul>
                                           </div>
                                       </div>
@@ -192,7 +201,7 @@
                   </div>
               </div>
           </div>
-          <div class="header_bottom sticky-header">
+          <div id="myHeader" class="header_bottom sticky-header">
               <div class="pl-2">
                   <div class="row align-items-center" [ngClass]="{'rtl': is_rtl}">
                       <div class="col-lg-2">
@@ -393,29 +402,3 @@
           </div>
       </div>
   </header>
-
-  
-
-
-
-
-
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
