--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -3,7 +3,7 @@
 font-family: Roboto,sans-serif;
 font-weight: 400;
 line-height: 1.3;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /*, 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 
 }
 .f-right{
