--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -36,7 +36,7 @@
               <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Limited items available at this price
               </p> -->
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
+              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
             </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
               <!-- <p class="owl-slide-animated owl-slide-subtitle">
               Lightweight cushioning and durable support with a Phylon midsole
               </p> -->
-              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
+              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button" translate="home.shop_now"></a></div>
             </div>
             </div>
           </div>
