--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,9 +6,9 @@
             <span translate="home.products"></span>
             <p translate="home.top_selling_products"></p>
           </div>
-          <div class="row m-3 ">
+          <div class="row m-3 p-2 ">
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -59,7 +59,7 @@
             </div>
 
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -82,7 +82,7 @@
                       </div></div></div></div></div>
             </div>
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -106,7 +106,7 @@
             </div>
 
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -130,7 +130,7 @@
             </div>
 
             <div class="col-lg-2">
-              <div class="product-item" style="width: 210px;">
+              <div class="product-item" style="width: 205px;">
                 <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                   <div class="css-wt0fwe">
                     <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -297,7 +297,7 @@
 
             <div class="row m-3 ">
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -321,7 +321,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -346,7 +346,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -369,7 +369,7 @@
                         </div></div></div></div></div>
               </div>
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -393,7 +393,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -417,7 +417,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -543,7 +543,7 @@
 
             <div class="row m-3 ">
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -567,7 +567,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -592,7 +592,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div>
@@ -615,7 +615,7 @@
                         </div></div></div></div></div>
               </div>
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -639,7 +639,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
@@ -663,7 +663,7 @@
               </div>
   
               <div class="col-lg-2">
-                <div class="product-item" style="width: 210px;">
+                <div class="product-item" style="width: 205px;">
                   <div points="0"  data-testid="product-card" class="c4-product-card css-1ncs8kg">
                     <div class="css-wt0fwe">
                       <!-- <div type="discount" class="css-hi2i2r"><span>12% Discount</span></div> -->
