--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -51,31 +51,31 @@
                         <div class="filter_type">
                                 <ul>
                                     <li>
-                                        <label class="container_check">Men <small>12</small>
+                                        <label class="container_check" translate="category.butter">Men <small>12</small>
                                           <input type="checkbox">
                                           <span class="checkmark"></span>
                                         </label>
                                     </li>
                                     <li>
-                                        <label class="container_check">Women <small>24</small>
+                                        <label class="container_check" translate="category.milk">Women <small>24</small>
                                           <input type="checkbox">
                                           <span class="checkmark"></span>
                                         </label>
                                     </li>
                                     <li>
-                                        <label class="container_check">Running <small>23</small>
+                                        <label class="container_check" translate="category.oil">Running <small>23</small>
                                           <input type="checkbox">
                                           <span class="checkmark"></span>
                                         </label>
                                     </li>
                                     <li>
-                                        <label class="container_check">Training <small>11</small>
+                                        <label class="container_check" translate="category.honey">Training <small>11</small>
                                           <input type="checkbox">
                                           <span class="checkmark"></span>
                                         </label>
                                     </li>
                                 </ul>
-                                <a href="#0" class="apply_filter">Apply</a>
+                                <a href="#0" class="apply_filter" translate="search.apply">Apply</a>
                             </div>
                     </div>
                 </div>
